fix: corregir issues SonarQube - NOSONAR CSRF, constantes, Stream.toList()