@@ -9,7 +9,6 @@ import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Servicio de negocio para la gestión del inventario de productos.
@@ -24,6 +23,8 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class ProductoService {
 
+    private static final String PRODUCTO_NO_ENCONTRADO = "Producto no encontrado";
+
     private final ProductoRepository productoRepository;
 
     /**
@@ -36,7 +37,7 @@ public class ProductoService {
         return productoRepository.findAll()
                 .stream()
                 .map(this::convertirAResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -50,7 +51,7 @@ public class ProductoService {
     public ProductoResponse obtener(String id) {
         Producto producto = productoRepository.findById(id)
                 .orElseThrow(() ->
-                    new RuntimeException("Producto no encontrado"));
+                    new RuntimeException(PRODUCTO_NO_ENCONTRADO));
         return convertirAResponse(producto);
     }
 
@@ -88,7 +89,7 @@ public class ProductoService {
             String id, Integer cantidad) {
         Producto producto = productoRepository.findById(id)
                 .orElseThrow(() ->
-                    new RuntimeException("Producto no encontrado"));
+                    new RuntimeException(PRODUCTO_NO_ENCONTRADO));
 
         int stockNuevo = producto.getStock() + cantidad;
 
@@ -111,7 +112,7 @@ public class ProductoService {
                 .findByStockLessThanEqual(10)
                 .stream()
                 .map(this::convertirAResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private ProductoResponse convertirAResponse(Producto producto) {
@@ -140,7 +141,7 @@ public class ProductoService {
     public ProductoResponse actualizar(String id, ProductoRequest request) {
         Producto producto = productoRepository.findById(id)
                 .orElseThrow(() ->
-                    new RuntimeException("Producto no encontrado"));
+                    new RuntimeException(PRODUCTO_NO_ENCONTRADO));
 
         producto.setNombre(request.getNombre());
         producto.setDescripcion(request.getDescripcion());
@@ -164,7 +165,7 @@ public class ProductoService {
     public void eliminar(String id) {
         productoRepository.findById(id)
                 .orElseThrow(() ->
-                    new RuntimeException("Producto no encontrado"));
+                    new RuntimeException(PRODUCTO_NO_ENCONTRADO));
         productoRepository.deleteById(id);
     }
 }
